Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83889

Sharing a scene with custom material between multiple windows doesn't work

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.15.1
    • 5.15.0 Beta4
    • Quick: 3D
    • None
    • 5
    • e73f1d29fed5728f9ff89edac0cff14bfe2a26bf (qt/qtquick3d/5.15)

    Description

      Using same scene in multiple View3Ds in multiple windows doesn't work if there's a custom material in the scene. To reproduce, run the attached example.

      It looks like the problem is that QQuick3DCustomMaterial::updateSpatialNode() determines the context when it's first run and the shaders are cached only in that context.

      This issue blocks showing custom materials in Design Studio 3D edit view.

      QQuick3DEffect::updateSpatialNode() also determines context in similar manner, so it might also have similar issues.

      Attachments

        1. CustomMaterialTest.zip
          7 kB
          Miikka Heikkinen

        Issue Links

          For Gerrit Dashboard: QTBUG-83889
          # Subject Branch Project Status CR V

          Activity

            People

              janichol Andy Nichols
              e0348803 Miikka Heikkinen
              Pasi Keränen Pasi Keränen
              Andy Nichols Andy Nichols
              Votes:
              1 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes