Fix custom material window and property detection

Custom materials didn't correctly detect the window in importScene
case. Also fixed the property detection in cases there is more than
one superclass on top of the custom material base class.

This isn't a complete fix for QTBUG-83889, but it at least makes it
possible to use custom materials in Design Studio without crashing
the QML puppet. Now the custom material shows up properly on either
form editor or in 3D edit view (the latter in cases where QML document
doesn't have View3D using the material to hijack the material shader).
Since you don't get both at the same time, editing the scene with
custom materials is still painful.

Task-number: QTBUG-83889
Pick-to: 5.15
Change-Id: I05f23145dcdbf5c03dce5a612fdebf5b84eb0182
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
Reviewed-by: Mahmoud Badri <mahmoud.badri@qt.io>
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
Reviewed-by: Thomas Hartmann <thomas.hartmann@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>